# animal-ai-stablebaselines3

./: .gitignore  README.md  pyproject.toml
aai/configs/: sanityGreen.yml
src/animalai_stable_baselines/: play.py  train.py  utils.py
