[project]
name        = "animalai-stable-baselines"
version     = "0.1.0"
description = "A template repository integrating AnimalAI with Stable Baselines3."
readme      = "README.md"
authors     = [{ name = "Wout Schellaert", email = "wout.schellaert@gmail.com" }]

# - AnimalAI == 4.0.1
#   requires Python >=3.6, <3.10
#   requires ml-agents== 0.30.0
#   ..requires "torch>=1.8.0,<=1.11.0;(platform_system!='Windows' and python_version>='3.9')",
#   ..requires "torch>=1.6.0,<1.9.0;(platform_system!='Windows' and python_version<'3.9')",
#
# - Stable Baselines3 == 2.0.0
#   requires torch>=1.11
#   Note: Later version of Stable Baselines require "torch>=1.13", which is not compatible with ml-agents.
dependencies    = [
    "animalai==4.0.1",
    "stable-baselines3==2.3.0",
    "shimmy==1.3.0",
    "sb3-contrib==2.3.0",
    "wandb==0.17.0",
    "tensorboard==2.16.2",
]
requires-python = ">= 3.9"

[project.scripts]
train = "animalai_stable_baselines.train:main"
play  = "animalai_stable_baselines.play:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed          = true
dev-dependencies = []


[tool.hatch.metadata]
allow-direct-references = true
